--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,11 +57,13 @@
           </div><!--/.well -->
         </div><!--/span-->
       </div><!--/row-->
-    </div> <!-- /container -->
-      <div class="row" style="padding-top: 105px;" align="center">
-  
-          <%= image_tag "footer2.png" %>
-      
+     <div class="row" style="position:fixed; bottom: 5px; width: 95%; background: linear-gradient(to right, #e87b17, #fbae30);">
+      <div align="center">
+       <h5 style="color: white;">&copy; C. W. Briggs, 2018</h5>
       </div>
+    </div>      
+    </div> <!-- /container -->
+
+  
   </body>
 </html>
