--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1 class="type">Welcome to the Bizarre Bazaar</h1>
-<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Your source for everything rolling around inside the mind of C. W. Briggs.</h5>
+<div align="center">
+	<h1 class="type">Welcome to the Bizarre Bazaar</h1>
+	<h5 style="padding-bottom: 50px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Your source for everything rolling around inside the mind of C. W. Briggs.</h5>
+	<%= image_tag "footer.jpg", size: "500x240" %>
+</div>
