--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,11 +15,42 @@
  *= require_self
  */
 
+body {
+ 	font-family: 'Philosopher', sans-serif; background-color: #f9f1f1;
+ }
 
- .type {
+.type {
  	font-family: 'IM Fell DW Pica SC', serif;
  }
 
- body {
+li.type {
+ 	font-family: 'IM Fell DW Pica SC', serif; font-size: 18px; font-weight: bolder; 
+ }
+
+.body {
  	font-family: 'Philosopher', sans-serif;
  }
+
+.body-bold {
+	font-family: 'Philosopher', sans-serif; font-weight: bolder;
+}
+
+a.head:link {
+	font-family: 'IM Fell DW Pica SC', serif; font-size: 18px; font-weight: bolder; color: #562400;
+}
+
+a.head:visited {
+	font-family: 'IM Fell DW Pica SC', serif; font-size: 18px; font-weight: bolder; color: #562400;
+}
+
+a.head:hover {
+	font-family: 'IM Fell DW Pica SC', serif; font-size: 18px; font-weight: bolder; color: #562400;
+}
+
+a.head:active {
+	font-family: 'IM Fell DW Pica SC', serif; font-size: 18px; font-weight: bolder; color: #562400; 
+}
+
+.footer {
+	font-family: 'Philosopher', sans-serif; font-weight: bold; color: #562400;
+}
