--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 <%- model_class = Article -%>
+
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
@@ -16,7 +17,7 @@
     <% @articles.each do |article| %>
       <tr>
         <td><%= link_to article.id, article_path(article) %></td>
-        <td><%= article.title %></td>
+        <td><%= article.title, class: "type"%></td>
         <td><%= article.body %></td>
         <td><%=l article.created_at %></td>
         <td>
@@ -38,3 +39,5 @@
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_article_path,
             :class => 'btn btn-primary' %>
+
+<%= render 'article', obj: @articles %>
