--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,23 +1,30 @@
-<%- model_class = Article -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+<h2 align="center" class="type">
+Title: <%= @article.title %>  
+</h2>
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4>
+    <strong>Body</strong>
+  </h4>
+    <hr>
+    <div>
+      <p class="body"><%= simple_format(@article.body) %></p>
+  </div>
+
+
+  <% if @article.categories.any? %>
+    <p>Categories: <%= render @article.categories %></p>
+  <% end %>
+
+
+  <div>
+  
+  <%= link_to "Edit This Article", edit_article_path(@article), class: "btn btn-xs btn-danger" %> 
+  <%= link_to "Delete Article", article_path(@article), method: :delete, 
+                                                        data: {confirm: "Are your sure you want to delete?"}, 
+                                                        class: "btn btn-xs btn-danger" %>
+    <%= link_to "Article Main", articles_path, class: "btn btn-xs btn-danger" %>
+  
+  </div>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
-  <dd class="type"><%= @article.title %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:body) %>:</strong></dt>
-  <dd><%= @article.body %></dd>
-  <dt><strong>Categories</strong></dt>
-  <dd class="badge"><%= render @article.categories %></dd>
-</dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              articles_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_article_path(@article), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              article_path(@article),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
