--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,17 @@
-<div align="center">
-	<h1 class="type">Welcome to the Bizarre Bazaar</h1>
-	<h5 style="padding-bottom: 50px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Your source for everything rolling around inside the mind of C. W. Briggs.</h5>
-	<%= image_tag "footer.jpg", size: "500x240" %>
-</div>
+
+  <div class="row">
+    <div class="col-lg-9">
+
+    </div>
+    <div class="col-lg-3">
+      <div class="well sidebar-nav">
+        <div align="center">
+          <%= image_tag "pic.jpg", size: "150x232" %>
+          <h1 class="type">Welcome to the Bizarre Bazaar</h1>
+        <h5 class="body">-Your source for everything rolling around inside the mind of <strong>C. W. Briggs</strong></h5>
+        </div>
+      </div><!--/.well -->
+    </div><!--/span-->
+  </div><!--/row-->
+
+<!-- /container -->
