added news and about along with more styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,8 @@
             </ul>
 
 
-            <li><%= link_to "News", "/path1", class: "head", style: "color: #562400;" %></li>
-            <li><%= link_to "About C. W. Briggs", "/path3", class: "head", style: "color: #562400;" %></li>
+            <li><%= link_to "News", news_index_path, class: "head", style: "color: #562400;" %></li>
+            <li><%= link_to "About C. W. Briggs", about_path, class: "head", style: "color: #562400;" %></li>
           </ul>
         </div>
       </div>
