--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,9 +10,17 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *
  *= require devise_bootstrap_views
+ *= require trix
  *= require_tree .
  *= require_self
+
+
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
+
+ 
  */
 
 body {
