--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,32 +1,27 @@
-<%- model_class = Article -%>
-
-<!-- <div class="page-header">
+<!--<%- model_class = News -%>
+<div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:body) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @articles.each do |article| %>
+    <% @news.each do |news| %>
       <tr>
-        <td><%= link_to article.id, article_path(article) %></td>
-        <td class="type"><%= article.title %></td>
-        <td><%= article.body %></td>
-        <td><%=l article.created_at %></td>
+        <td><%= link_to news.id, news_path(news) %></td>
+        <td><%=l news.created_at %></td>
         <td>
           <%= link_to t('.show', :default => t("helpers.links.show")),
-                      article_path(article), :class => 'btn btn-default btn-xs' %>
+                      news_path(news), :class => 'btn btn-default btn-xs' %>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_article_path(article), :class => 'btn btn-default btn-xs' %>
+                      edit_news_path(news), :class => 'btn btn-default btn-xs' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      article_path(article),
+                      news_path(news),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-xs btn-danger' %>
@@ -37,7 +32,7 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_article_path,
+            new_news_path,
             :class => 'btn btn-primary' %> -->
 
-<%= render 'article', obj: @articles %>
+<%= render 'news', obj: @news %>
